# ringchat

./: .gitignore  README.md  README_KO.md  docker-compose.dev.yml  docker-compose.yml
.github/: PULL_REQUEST_TEMPLATE.md
.github/ISSUE_TEMPLATE/: feature_template.md  feature_template.yml  fix_template.md  fix_template.yml
.github/workflows/: pr-notification.yml  pr-test.yml
backend/: .env.sample  .gitignore  CONTRIBUTING.md  Dockerfile  Dockerfile.dev  README.md  pyproject.toml  requirements.txt
backend/app/: database.py  main.py
backend/app/db/: database.py  models.py
backend/app/db/crud/: __init__.py  chat_room.py  folder.py  link.py  message.py  rating.py  user.py  user_info.py
backend/app/llm/: embedding.py  langchain.py  link_task.py  message_task.py
backend/app/models/: __init__.py  chatting.py  folder.py  link.py  satisfaction.py  tables.py  users.py  vector.py
backend/app/routers/: auth.py  chatrooms.py  folders.py  links.py  me.py  messages.py  rating.py  user.py
backend/app/schemas/: chat_room.py  folder.py  link.py  message.py  rating.py  user.py  user_info.py
backend/app/tasks/: link_task.py
backend/app/utils/: get_langchain_answer.py  langchain.py  logging.py  parser.py  scheduler_config.py  security.py  url_processor.py  vector_operations.py
backend/tests/: example_data_insert.py  test_langchain_answer.py
backend/tests/text_files/: doc1.txt  doc2.txt  doc3.txt  doc4.txt
frontend/: .env.sample  Dockerfile  Dockerfile.dev  package-lock.json  package.json  tailwind.config.ts
frontend/src/app/: error.tsx  layout.tsx  loading.tsx  page.tsx
frontend/src/app/api/chatrooms/: route.ts
frontend/src/app/api/chatrooms/[roomId]/messages/: route.ts
frontend/src/app/api/folders/: route.ts
frontend/src/app/api/links/: route.ts
frontend/src/app/chat/: layout.tsx  page.tsx
frontend/src/app/chat/@modal/(.)link-search/: page.tsx
frontend/src/app/chat/[chatroomId]/: page.tsx
frontend/src/app/chat/[roomId]/: page.tsx
frontend/src/app/chat/link-search/: page.tsx
frontend/src/app/main/: error.tsx  layout.tsx  loading.tsx  page.tsx
frontend/src/app/main/@modal/(.)link/: page.tsx
frontend/src/app/main/chat/[roomId]/: page.tsx
frontend/src/app/main/link/: page.tsx
frontend/src/components/: ChatList.tsx  ChatRoom.tsx  ChatRoomFolder.tsx  ChatRoomList.tsx  GuestSideBar.tsx  Icons.tsx  Logo.tsx  MemberSideBar.tsx  NewChatButton.tsx  NewFolderButton.tsx  SideBar.tsx  TopBar.tsx
frontend/src/components/auth/: AuthForm.tsx  LoginForm.tsx  SignupForm.tsx
frontend/src/components/buttons/: LinkSearchButton.tsx  LinkSearchNavButton.tsx  LoginButton.tsx  LogoutButton.tsx  NewChatButton.tsx  NewFolderButton.tsx  SignupButton.tsx  StartButton.tsx  SubmitChatButton.tsx
frontend/src/components/chat/: AIMessage.tsx  MessageInput.tsx  Rating.tsx  UserMessage.tsx
frontend/src/components/common/: Descriptions.tsx  Icons.tsx  InputField.tsx  InvalidToken.tsx  Logos.tsx  Markdown.tsx  Texts.tsx
frontend/src/components/link/: Link.tsx  LinkForm.tsx  LinkModalNav.tsx  LinkSortingMenu.tsx
frontend/src/components/server/: TopBarServer.tsx
frontend/src/components/sidebar/: ChatRoom.tsx  Folder.tsx  FolderList.tsx  NoFolderList.tsx  SideBar.tsx  SideBarTop.tsx
frontend/src/components/topbar/: TopBar.tsx
frontend/src/context/: AuthContext.tsx  FolderContext.tsx  LinkContext.tsx
frontend/src/lib/: api.ts  fetch.ts  interfaces.ts
frontend/src/styles/: globals.css  modal.css  sidebar.css
prototype/: .gitignore  prototype.py  pyproject.toml
