[tool.poetry]
name = "ringchat"
version = "0.1.0"
description = ""
authors = ["Your Name <you@example.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
fastapi = "^0.112.0"
uvicorn = "^0.30.5"
langchain = "^0.2.12"
langchain-community = "^0.2.11"
langchain-openai = "^0.1.20"
python-dotenv = "^1.0.1"
oracledb = "^2.3.0"
chromadb = "^0.5.5"
langchain-huggingface = "^0.0.3"
beautifulsoup4 = "^4.12.3"
pgvector = "^0.3.2"
psycopg2-binary = "^2.9.9"
alembic = "^1.13.2"
asyncpg = "^0.29.0"
greenlet = "^3.0.3"
pyjwt = "^2.9.0"
passlib = {extras = ["bcrypt"], version = "^1.7.4"}
bcrypt = "==4.0.1"
isort = "^5.13.2"
black = "^24.8.0"
flake8 = "^7.1.1"
flake8-pyproject = "^1.2.3"
flake8-mutable = "^1.2.0"
apscheduler = "^3.10.4"
lxml-html-clean = "^0.2.2"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.isort]
profile = "google"            # Use the Google style guide for import sorting
line_length = 80    
multi_line_output = 3         # Set multi-line import statement output style (3: vertical hanging indent)
include_trailing_comma = true # Add trailing commas to multi-line imports
force_grid_wrap = 0           # Do not force line wrapping for multi-line imports
use_parentheses = true        # Use parentheses for multi-line imports (using () in multi-line imports) 

[tool.black]
line-length = 80           # Set maximum line length to 80 characters
target-version = ['py310'] # Specify the target Python version 
include = '\.pyi?$'        # Apply black to Python files and Python stub files
exclude = '''              # Exclude directories or file patterns from black formatting
/(
    \.git
  | \.hg
  | \.mypy_cache
  | \.tox
  | \.venv
  | _build
  | buck-out
  | build
  | dist
)/
''' 

[tool.flake8]
max-line-length = 80 
extend-ignore = ["E203"]   # Ignore error including whitespace before colon

plugins = [
    "flake8_mutable"       # Prevent the use of mutable objects as default arguments in functions
]