[tool.poetry]
name = "prototype"
version = "0.1.0"
description = ""
authors = ["Chanho Lee <ibear6954@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
streamlit = "^1.37.0"
tiktoken = "^0.7.0"
python-dotenv = "^1.0.1"
langchain = "^0.2.11"
langchain-community = "^0.2.10"
langchain-huggingface = "^0.0.3"
langchain-openai = "^0.1.19"
loguru = "^0.7.2"
chromadb = "^0.5.5"
protobuf = "^4.25.4"
black = "^24.4.2"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
